# legadilo

./: .dockerignore  .editorconfig  .envrc  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc.json  AUTHORS.md  CHANGELOG.md  CONTRIBUTORS.txt  LICENSE  README.md  REUSE.toml  _typos.toml  ci.yml  eslint.config.cjs  justfile  local.yml  manage.py  package-lock.json  package.json  production.yml  pyproject.toml
.app-template/: apps.py-tpl  urls.py-tpl
.app-template/views/: __init__.py-tpl
.devcontainer/: bashrc.override.sh  complete-creation.sh  devcontainer.json
.envs/.local/: .django  .postgres  .pycharm
.github/: dependabot.yml
.github/workflows/: ci.yml
browser-extension/: copy-vendors.js  package-lock.json  package.json  tsconfig.json  vitest.config.js
browser-extension/chrome-src/: action.js  manifest.json  options.html  service-worker.js
browser-extension/firefox-src/: action.html  action.js  background.js  manifest.json  options.js
browser-extension/scripts/: extract-i18n.js
browser-extension/src/: action.css  action.html  action.js  action.test.js  background.js  background.test.js  bs-sprite.svg.license  globals.d.ts  i18n.js  legadilo.js  legadilo.test.js  manifest.json  options.css  options.html  options.js  options.test.js  setupTests.js  theme_chooser.js  types.js  typing-utils.js  utils.js  utils.test.js
browser-extension/src/icons/: legadilo.512x512.png.license
browser_ext/: manifest.json  popup.html  popup.js
compose/local/django/: Dockerfile  start
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile  entrypoint  start
compose/production/nginx/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api.py  asgi.py  settings.py  urls.py  websocket.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
devops/: license-header-template.txt  release.sh
devops/envs/local/: django  postgres  pycharm
devops/scripts/: local-ci.sh  release.sh
docs/: Makefile  __init__.py  conf.py  deploy.md  howto.md  howto.rst  import_export.md  index.rst  make.bat  tech_howto.rst  users.rst
docs/adrs/: 0000-project-setup.md  0001-organizing-articles.md  0002-reading-lists.md  0003-article-deduplication.md  0004-user-settings.md  0005-deployment.md  0006-delete-articles-linked-with-feeds.md  0007-api.md  0008-browser-extension.md  0009-remove-asnyc-for-now.md  0010-prevent-duplicates-article-feeds.md  0011-improve-data-sanitization.md  0012-simplify-article-deletion.md  0013-group-of-articles.md  0014-save-articles-not-html.md  0015-simplify-some-m2m.md  0016-multiple-database-backends.md  index.rst
docs/pycharm/: configuration.rst
legadilo/: __init__.py  conftest.py  constants.py  types.py
legadilo/contrib/: __init__.py
legadilo/contrib/sites/: __init__.py
legadilo/core/: admin.py  apps.py  checks.py  constants.py  context_processors.py  middlewares.py
legadilo/core/forms/: __init__.py  fields.py  widgets.py
legadilo/core/migrations/: 0001_case_insensitive_collation.py  0002_initial.py  0003_add_nocase_collation.py  0004_remove_old_case_insensitive_collation.py
legadilo/core/models/: __init__.py  timezone.py
legadilo/core/template_tags/: __init__.py  util_tags.py
legadilo/core/tests/: test_checks.py  test_migrations.py
legadilo/core/utils/: api.py  collections_utils.py  db.py  exceptions.py  file.py  locale.py  loggers.py  testing.py  text.py  time_utils.py  validators.py
legadilo/feeds/: admin.py  api.py  apps.py  checks.py  constants.py  signals.py  templatetags.py  urls.py
legadilo/feeds/admin/: __init__.py  article_admin.py  feed_admin.py
legadilo/feeds/forms/: __init__.py  feed_forms.py
legadilo/feeds/migrations/: 0001_initial.py  0002_article_article_feeds_article_article_unique_in_feed.py  0002_initial.py  0003_alter_feedcategory_options_alter_feedtag_options_and_more.py  0003_feedupdate.py  0003_fill_missing_slugs.py  0003_remove_feed_feeds_feed_disabled_reason_empty_when_enabled_and_more.py  0004_feed_disabled_reason_and_more.py  0004_feed_slug.py  0004_feedupdate_technical_debug_data.py  0005_feed_open_original_link_by_default.py  0005_remove_feed_feeds_feed_feed_type_valid_and_more.py  0006_remove_article_feeds_article_article_unique_in_feed_and_more.py  0006_rename_modified_at_feed_updated_at_and_more.py  0007_alter_feed_enabled.py  0007_article_is_favorite_article_was_opened.py  0008_feed_article_retention_time.py  0008_readinglist_and_more.py  0009_feedupdate_ignored_article_links_and_more.py  0009_readinglist_feeds_readinglist_enforce_slug_unicity.py  0010_alter_article_authors_alter_article_content_and_more.py  0010_remove_feed_feeds_feed_refresh_delay_type_valid_and_more.py  0011_alter_readinglist_options_readinglist_order.py  0011_remove_feeddeletedarticle_feeds_feeddeletedarticle_delete_article_once_per_feed_and_more.py  0012_apply_cleaner_sanitization.py  0012_rename_tags_article_feed_tags.py  0013_articletag_feedtag_tag_feedtag_tag_articletag_tag_and_more.py  0013_feedarticle_feed_article_id_feedarticle_last_seen_at_and_more.py  0021_article_slug.py  (+33 more)
legadilo/import_export/: api.py  apps.py  constants.py  urls.py
legadilo/reading/: admin.py  api.py  apps.py  constants.py  signals.py  templatetags.py  urls.py
legadilo/templates/: 403.html  403_csrf.html  404.html  500.html  base.html
legadilo/users/: adapters.py  admin.py  api.py  apps.py  constants.py  context_processors.py  forms.py  managers.py  models.py  session_store.py  signals.py  typing.py  urls.py  urls_override.py  user_types.py  view_decorators.py  views.py
legadilo/utils/: api.py  collections.py  collections_utils.py  command.py  decorators.py  exceptions.py  file.py  http.py  http_utils.py  iterables.py  loggers.py  pagination.py  security.py  testing.py  text.py  time.py  time_utils.py  urls.py  validators.py
legadilo/website/: apps.py  urls.py
legado/: conftest.py
legado/templates/: 403_csrf.html  404.html  base.html
legado/users/: adapters.py  admin.py  apps.py  models.py  urls.py
locale/: README.md
requirements/: base.txt  local.txt  production.txt
(+527 files in other folders)
